--- a/front-web/seckill-provider/src/main/resources/application.yml
+++ b/front-web/seckill-provider/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 server:
   port: 8000
 spring:
@@ -33,3 +34,4 @@ info:
     java:
       source: @java.version@
       target: @java.version@
+debug: true
