--- a/front-web/pom.xml
+++ b/front-web/pom.xml
@@ -17,6 +17,7 @@
         <module>seckill-provider</module>
         <module>eureka-server</module>
         <module>user-provider</module>
+        <module>seckill-gateway</module>
     </modules>
 
     <properties>
@@ -32,6 +33,20 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.zeroturnaround</groupId>
+                <artifactId>jrebel-maven-plugin</artifactId>
+                <version>1.1.7</version>
+                <executions>
+                    <execution>
+                        <id>generate-rebel-xml</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
