--- a/modules/cacheable-config/pom.xml
+++ b/modules/cacheable-config/pom.xml
@@ -1,23 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>SecKill</artifactId>
+        <artifactId>modules</artifactId>
         <groupId>com.danlu.seckill</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>modules</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>cacheable-config</artifactId>
+    <packaging>jar</packaging>
 
-    <name>modules</name>
+    <name>cacheable-config</name>
     <url>http://maven.apache.org</url>
-    <modules>
-        <module>security-auth</module>
-        <module>seckill-service</module>
-        <module>user-service</module>
-        <module>cacheable-config</module>
-    </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -26,9 +20,11 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-aop</artifactId>
+            <artifactId>spring-boot</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
     </dependencies>
-
-
 </project>
