--- a/modules/seckill-service/pom.xml
+++ b/modules/seckill-service/pom.xml
@@ -23,10 +23,6 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
-        </dependency>
-        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
@@ -34,6 +30,11 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-java8</artifactId>
             <version>5.2.10.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>com.danlu.seckill</groupId>
+            <artifactId>cacheable-config</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
