--- a/modules/user-service/pom.xml
+++ b/modules/user-service/pom.xml
@@ -53,5 +53,10 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.danlu.seckill</groupId>
+            <artifactId>cacheable-config</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
