--- a/modules/user-service/pom.xml
+++ b/modules/user-service/pom.xml
@@ -44,9 +44,9 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
-            <version>0.7.0</version>
+            <groupId>com.danlu.seckill</groupId>
+            <artifactId>jwt-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.danlu.seckill</groupId>
