--- a/modules/jwt-core/pom.xml
+++ b/modules/jwt-core/pom.xml
@@ -23,5 +23,10 @@
             <artifactId>jjwt</artifactId>
             <version>0.7.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
